Fix: filter not responsive

--- a/src/component/Filter/style.css
+++ b/src/component/Filter/style.css
@@ -9,7 +9,3 @@
 .filter-input:focus {
     border: 1px solid #444CE6;
 }
-
-.filter {
-
-}
